<resources>
    <string name="app_name">Kinda Messenger</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_hint">Войдите, чтобы получить доступ к функционалу</string>
    <string name="username">Логин</string>
    <string name="username_hint">Введите логин</string>
    <string name="password">Пароль</string>
    <string name="password_hint">Введите пароль</string>
    <string name="don_t_have_an_account">Ещё нет аккаунта?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="have_an_account">Уже есть аккаунт?</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="sign_in_title">Вход</string>
    <string name="error_login_length">Логин должен содержать от 3 до 20 символов</string>
    <string name="error_login_char">Логин должен содержать только латинские символы, цифры и символы подчёркивания</string>
    <string name="error_password_length">Пароль должен содержать от 8 до 20 символов</string>
    <string name="error_password_repeat">Пароли не совпадают</string>
    <string name="title_could_not_sign_in">Не удалось выполнить вход</string>
    <string name="info_wrong_credentials">Неправильный логин или пароль</string>
    <string name="info_unexpected_error">Что-то пошло не так</string>
    <string name="info_login_taken">Логин уже занят</string>
    <string name="friends">Друзья</string>
    <string name="dialogs">Диалоги</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="notifications">Уведомления</string>
    <string name="create_conversation">Создать беседу</string>
    <string name="no_results">Нет результатов</string>
    <string name="no_dialogs">Нет диалогов</string>
    <string name="no_friends">Нет друзей</string>
    <string name="dialog_last_message_sender">%1$s:</string>
    <string name="logout">Выйти</string>
    <string name="open_dialog">Открыть диалог</string>
    <string name="friend_status_friend">У вас в друзьях</string>
    <string name="friend_status_none">Не в друзьях</string>
    <string name="friend_status_sent">Заявка в друзья отправлена</string>
    <string name="friend_status_gotten">Отправил вам заявку в друзья</string>
    <string name="add_friend">Добавить в друзья</string>
    <string name="remove_friend">Удалить из друзей</string>
    <string name="unsupported">Не поддерживается вашим устройством</string>
    <string name="cancelled">Отменено пользователем</string>
    <string name="no_messages">Нет сообщений</string>
    <string name="loading">Загрузка...</string>
    <string name="edit_conversation">Редактирование беседы</string>

    <!-- Notifications -->

    <string name="notification_friend_request_title">Запрос в друзья</string>
    <string name="notification_friend_request_content">Пользователь %1$s отправил вам запрос в друзья</string>
    <string name="notification_conversation_invite_title">Приглашение в беседу</string>
    <string name="notification_conversation_invite_content">Пользователь %1$s отправил вам приглашение в беседу %2$s</string>
    <string name="accept">Принять</string>
    <string name="cancel">Отмена</string>
    <string name="no_notifications">Нет уведомлений</string>

    <!-- Profile menu -->

    <string name="upload_photo">Загрузить фото</string>
    <string name="make_profile_hidden">Скрыть профиль</string>
    <string name="make_profile_visible">Открыть профиль</string>

    <string name="dialog_open_profile_title">Открыть профиль?</string>
    <string name="dialog_open_profile_message">Профиль станет доступным другим пользователям для поиска</string>
    <string name="dialog_open_profile_button_ok">Открыть</string>
    <string name="dialog_open_profile_button_cancel">Отмена</string>

    <string name="dialog_hide_profile_title">Скрыть профиль?</string>
    <string name="dialog_hide_profile_message">Профиль станет недоступным другим пользователям для поиска</string>
    <string name="dialog_hide_profile_button_ok">Скрыть</string>
    <string name="dialog_hide_profile_button_cancel">Отмена</string>

    <!-- Dialog -->

    <string name="dialog_create_conversation_title">Создать беседу</string>
    <string name="dialog_create_conversation_input_hint">Название беседы</string>
    <string name="dialog_create_conversation_cancel">Отмена</string>
    <string name="dialog_create_conversation_ok">Создать</string>

    <string name="set_conversation_name_title">Переименовать беседу</string>
    <string name="set_conversation_name_input_hint">Название беседы</string>
    <string name="set_conversation_name_cancel">Отмена</string>
    <string name="set_conversation_name_ok">Сменить</string>

    <string name="dialog_invite_title">Пригласить в беседу</string>
    <string name="dialog_invite_cancel">Отмена</string>
    <string name="dialog_invite_ok">Выбрать</string>

    <string name="dialog_create_conversation_unknown_error">Не удалось создать беседу</string>
    <string name="conversation_report_downloading">Загрузка отчета...</string>
    <string name="conversation_report_downloaded">Отчет сохранен в %1$s</string>

    <string name="member_option_remove">Удалить из беседы</string>
    <string name="member_option_assign_role">Назначить роль</string>

    <string name="dialog_member_invited">Новый участник \"%1$s\" приглашен в беседу</string>
    <string name="dialog_member_removed">Участник \"%1$s\" исключен из беседы</string>
    <string name="dialog_member_role_set">Участнику \"%1$s\" назначена роль \"%2$s\"</string>

    <string name="dialog_option_details">Подробности</string>
    <string name="dialog_option_invite">Пригласить друга</string>
    <string name="dialog_option_leave">Покинуть диалог</string>
    <string name="dialog_change_name">Сменить название</string>
    <string name="dialog_change_image">Сменить изборажение</string>
    <string name="dialog_option_download_report">Отчет об активности</string>

    <string name="dialog_option_leave_title">Покинуть диалог?</string>
    <string name="dialog_option_leave_message">Вы потеряете всю историю сообщений</string>
    <string name="dialog_option_leave_cancel">Отмена</string>
    <string name="dialog_option_leave_ok">Покинуть</string>
</resources>